# bananyang-releases

./: .gitignore  AUDIT_REPORT.md  BanaNyang_User_Manual.md  CLAUDE.md  QUALITY_HOOKS_PLAN.md  README.md  firebase.json  firestore.indexes.json  firestore.rules  index.html  main.js  metadata.json  package-lock.json  package.json  preload.js  storage.rules  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release-mac.yml  release.yml
assets/: Untitled-1.psd
docs/: .bkit-memory.json  .pdca-status.json  4K_IMAGE_STABILITY_PDCA.md  LAUNCH_CHECKLIST.md  MEMORY_OPTIMIZATION_PLAN.md  MEMORY_OPTIMIZATION_PLAN_V2.md  PDCA_FIREBASE_COMMERCIALIZATION.md  PDCA_WEB_DRM.md  PLAN_AI_TAB_SINGLE_MULTI_OPTIONS.md  PRODUCT_AUDIT_REPORT.md  ai-sort-improvement-plan.md  image-limit-1000-pdca.md  macos-build-plan.md
functions/: package-lock.json  package.json
functions/lib/: index.js  (+5 more)
scripts/: build-thumbnail-dll.js  build-with-env.js  convert-installer-images.js  create-ico.js  create-icon.js  create-installer-assets.js  generate-icons.js  generate-installer-assets.js  installer-assets.html  notarize.js  register-dev-user.js  release-firebase.mjs  release.js  test-web.js  upload-release.mjs
shell-thumbnail-provider/: Cargo.toml
shell-thumbnail-provider/src/: factory.rs  lib.rs  registry.rs  thumbnail.rs  zip_thumb.rs
src/: App.tsx  constants.ts  declarations.d.ts  electron.d.ts  env.ts  index.css  index.tsx  types.ts
src/rust/: Cargo.toml
src/rust/src/: lib.rs
web/: AUTH_IMPLEMENTATION_PLAN.md  package-lock.json  package.json  upload-release.cjs
(+354 files in other folders)
