[package]
name = "bananyang-thumb"
version = "0.1.0"
edition = "2021"

[lib]
name = "bananyang_thumb"
crate-type = ["cdylib"]

[dependencies]
windows-core = "0.58"
windows = { version = "0.58", features = [
    "implement",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Graphics_Gdi",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
] }
windows-implement = "0.58"
zip = { version = "2", default-features = false, features = ["deflate"] }
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
