[package]
name = "wasm-image-processor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = { version = "0.1", optional = true }
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "webp"] }

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = "s"
lto = true
